# Audio-Convolution-Reverb

./: .gitignore  CHANGELOG.md  LICENSE  Package.swift  README.md  pyproject.toml
Resources/: AppIcon.icns
Sources/AudioConvolutionReverbApp/: AudioConvolutionReverbApp.swift  StudioView.swift  StudioViewModel.swift
Sources/AudioConvolutionReverbCLI/: main.swift
Sources/AudioConvolutionReverbCore/: AVAudioConverterIO.swift  AudioAnalysis.swift  AudioTypes.swift  ComplexFFT.swift  ReverbDSP.swift  ReverbDatabase.swift  WAVAudioIO.swift
Tests/Swift/AudioConvolutionReverbCoreTests/: ReverbDSPTests.swift
assets/: AppIcon.icns
notebooks/: original_convolution_reverb.ipynb
scripts/: generate-app-icon.swift  package-app.sh  package_release.sh
src/audio_convolution_reverb/: __init__.py  cli.py  core.py  gui.py  original_notebook.py
tests/: test_core.py
tests/AudioConvolutionReverbCoreTests/: AVAudioConverterIOTests.swift  AudioAnalysisTests.swift  ReverbDSPTests.swift  ReverbDatabaseTests.swift  WAVAudioIOTests.swift
