[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-convolution-reverb"
version = "1.1.1"
description = "A reusable convolution reverb tool built from the original portfolio notebook."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Han Bangyuan" }]
keywords = ["audio", "convolution", "reverb", "impulse-response", "portfolio"]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "soundfile>=0.12",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.0",
  "setuptools>=69",
  "wheel>=0.42"
]

[project.scripts]
audio-reverb = "audio_convolution_reverb.cli:main"
audio-reverb-gui = "audio_convolution_reverb.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
